--- a/explore.html
+++ b/explore.html
@@ -5,92 +5,129 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>explore | Jasminepro </title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>Explore | Thaigram</title>
 </head>
 
 <body>
+
     <header class="header">
         <div class="header__wrapper">
-            <a href="feed.html">
-                <img src="images/insta.png" class="header__link" alt="" />
+            <a href="feed.html" class="header__link">
+                <img src="images/logo.png" class="header__logo" />
             </a>
-
-            <input name="username" type="text" placeholder="Search" class="header__input" required />
+            <input type="search" placeholder="Search" class="header__input" />
             <ul class="header__icon-list">
                 <li class="header__icon">
                     <a href="explore.html" class="header__icon-link">
-                        <i class="fa fa-compass" aria-hidden="true"></i>
+                        <i class="fa fa-compass fa-lg" aria-hidden="true"></i>
                     </a>
-                    <li class="header__icon">
-                        <a href="#" class="header__icon-link">
-                            <i class="fa fa-heart" aria-hidden="true"></i>
-                        </a>
-                    </li>
-                    <li class="header__icon">
-                        <a href="profile.html" class="header__icon-link">
-                            <i class="fa fa-user-o" aria-hidden="true"></i>
-                        </a>
-                    </li>
+                </li>
+                <li class="header__icon">
+                    <a href="#" class="header__icon-link">
+                        <i class="fa fa-heart-o fa-lg" aria-hidden="true"></i>
+                    </a>
+                </li>
+                <li class="header__icon">
+                    <a href="profile.html" class="header__icon-link">
+                        <i class="fa fa-user-o fa-lg" aria-hidden="true"></i>
+                    </a>
+                </li>
             </ul>
         </div>
     </header>
+
+
     <main class="explore">
-        <span class="suggest">suggested</span>
-        <ul class="explore__user-lists">
+        <ul class="explore__user-list">
             <li class="explore__user">
-                <div class="explore__userinfo">
-                    <img src="images/userphoto.png" class="explore__userinfo-photo" />
-                    <div class="explore__userinfo-detail">
-                        <span class="explore__userinfo-id">victoria</span>
-                        <span class="explore__userinfo-name">Victoria Beckham.</span>
+                <div class="explore__column">
+                    <img src="images/avatar.jpg" class="explore__avatar">
+                    <div class="explore__info">
+                        <span class="explore__username">serranoarevalo</span>
+                        <span class="explore__full-name">Nicolás Serrano Arévalo</span>
                     </div>
                 </div>
-                <div class="expore__follow">
-                    <button class="explore__follow-button">Follow</button>
+                <div class="explore__column">
+                    <button class="explore__btn">Follow</button>
+                </div>
+            </li>
+            <li class="explore__user">
+                <div class="explore__column">
+                    <img src="images/avatar.jpg" class="explore__avatar">
+                    <div class="explore__info">
+                        <span class="explore__username">serranoarevalo</span>
+                        <span class="explore__full-name">Nicolás Serrano Arévalo</span>
+                    </div>
+                </div>
+                <div class="explore__column">
+                    <button class="explore__btn">Follow</button>
+                </div>
+            </li>
+            <li class="explore__user">
+                <div class="explore__column">
+                    <img src="images/avatar.jpg" class="explore__avatar">
+                    <div class="explore__info">
+                        <span class="explore__username">serranoarevalo</span>
+                        <span class="explore__full-name">Nicolás Serrano Arévalo</span>
+                    </div>
+                </div>
+                <div class="explore__column">
+                    <button class="explore__btn">Follow</button>
+                </div>
+            </li>
+            <li class="explore__user">
+                <div class="explore__column">
+                    <img src="images/avatar.jpg" class="explore__avatar">
+                    <div class="explore__info">
+                        <span class="explore__username">serranoarevalo</span>
+                        <span class="explore__full-name">Nicolás Serrano Arévalo</span>
+                    </div>
+                </div>
+                <div class="explore__column">
+                    <button class="explore__btn">Follow</button>
                 </div>
             </li>
         </ul>
     </main>
-
-    <!-- This is simple way to make : Footer>(nav>ul>li*9[a href="#"])+span{@ 2018 jasminepro}   -->
-    <footer class="footer">
-        <nav class="footer__navigation">
-            <ul class="footer__list">
-                <li class="footer__list-item">
-                    <a href="#">About us</a>
+    <!-- Footer -->
+    <footer class=" footer ">
+        <nav class="footer__navigation ">
+            <ul class="footer__list ">
+                <li class="footer__list-item ">
+                    <a href="# " class="footer__link ">About us</a>
                 </li>
-                <li class="footer__list-item">
-                    <a href="#" class="footer_link">Support</a>
+                <li class="footer__list-item ">
+                    <a href="# " class="footer__link ">Support</a>
                 </li>
-                <li class="footer__list-item">
-                    <a href="#" class="footer_link">Blog</a>
+                <li class="footer__list-item ">
+                    <a href="# " class="footer__link ">Blog</a>
                 </li>
-                <li class="footer__list-item">
-                    <a href="#" class="footer_link">Press</a>
+                <li class="footer__list-item ">
+                    <a href="# " class="footer__link ">Press</a>
                 </li>
-                <li class="footer__list-item">
-                    <a href="#" class="footer_link">Api</a>
+                <li class="footer__list-item ">
+                    <a href="# " class="footer__link ">API</a>
                 </li>
-                <li class="footer__list-item">
-                    <a href="#" class="footer_link">Jobs</a>
+                <li class="footer__list-item ">
+                    <a href="# " class="footer__link ">Jobs</a>
                 </li>
-                <li class="footer__list-item">
-                    <a href="#" class="footer_link">Privacy</a>
+                <li class="footer__list-item ">
+                    <a href="# " class="footer__link ">Privacy</a>
                 </li>
-                <li class="footer__list-item">
-                    <a href="#" class="footer_link">Terms</a>
+                <li class="footer__list-item ">
+                    <a href="# " class="footer__link ">Terms</a>
                 </li>
-                <li class="footer__list-item">
-                    <a href="#" class="footer_link">Directory</a>
+                <li class="footer__list-item ">
+                    <a href="# " class="footer__link ">Directory</a>
                 </li>
-                <li class="footer__list-item">
-                    <a href="#" class="footer_link">Language</a>
+                <li class="footer__list-item ">
+                    <a href="# " class="footer__link ">Language</a>
                 </li>
             </ul>
         </nav>
-        <span>@ 2018 jasminepro</span>
+        <span class="footer__copyright ">© 2018 thaigram</span>
     </footer>
 
 </body>
