--- a/feed.html
+++ b/feed.html
@@ -5,114 +5,153 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Feed | Jasminepro </title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>Feed </title>
 </head>
 
 <body>
+
     <header class="header">
         <div class="header__wrapper">
-            <a href="feed.html">
-                <img src="images/insta.png" class="header__link" alt="" />
+            <a href="feed.html" class="header__link">
+                <img src="images/logo.png" class="header__logo" />
             </a>
-
-            <input name="username" type="text" placeholder="Search" class="header__input" required />
+            <input type="search" placeholder="Search" class="header__input" />
             <ul class="header__icon-list">
                 <li class="header__icon">
                     <a href="explore.html" class="header__icon-link">
                         <i class="fa fa-compass fa-lg" aria-hidden="true"></i>
                     </a>
-                    <li class="header__icon">
-                        <a href="#" class="header__icon-link">
-                            <i class="fa fa-heart fa-lg" aria-hidden="true"></i>
-                        </a>
-                    </li>
-                    <li class="header__icon">
-                        <a href="profile.html" class="header__icon-link">
-                            <i class="fa fa-user-o fa-lg" aria-hidden="true"></i>
-                        </a>
-                    </li>
+                </li>
+                <li class="header__icon">
+                    <a href="#" class="header__icon-link">
+                        <i class="fa fa-heart-o fa-lg" aria-hidden="true"></i>
+                    </a>
+                </li>
+                <li class="header__icon">
+                    <a href="profile.html" class="header__icon-link">
+                        <i class="fa fa-user-o fa-lg" aria-hidden="true"></i>
+                    </a>
+                </li>
             </ul>
         </div>
-
     </header>
+
+    <!-- This are the COLUMNS -->
     <main class="feed">
-        <section class="phtoes">
+        <section class="photos">
             <article class="photo">
                 <header class="photo__header">
-                    <img src="images/avatar.jpg" class="phto__avatar" alt="" />
+                    <img src="images/avatar.jpg" class="photo__avatar" />
                     <div class="photo__info">
                         <span class="photo__owner">ina hur</span>
                         <span class="photo__place">Chiang Mai, Thailand</span>
                     </div>
                 </header>
-                <img src="images/feedphoto.jpg" class="photo_file" alt="" />
+                <img src="images/feedPhoto.jpg" class="photo__file" />
                 <div class="photo__feedback">
                     <div class="photo__actions">
                         <div class="photo__action-column">
                             <i class="fa fa-heart-o fa-lg"></i>
                             <i class="fa fa-comment-o fa-lg"></i>
                         </div>
+                        <div class="photo__action-column">
+                            <i class="fa fa-bookmark-o fa-lg"></i>
+                        </div>
                     </div>
-                    <div class="photo__action-column">
-                        <i class="fa fa-bookmark-o fa-lg"></i>
+                    <span class="photo__likes">51 likes</span>
+                    <ul class="photo__comments">
+                        <li class="photo__comment">
+                            <span class="photo__comment-author">
+                                nicolas
+                            </span>
+                            Lorem ipsum dolor sit amet consectetdkjalfjdalkjflakjdlkfjalkdjflkur adipisicing elit.
+                        </li>
+                    </ul>
+                    <span class="photo__timestamp">12 hours ago</span>
+                    <div class="photo__make-comment">
+                        <textarea placeholder="Add a comment.."></textarea>
+                        <i class="fa fa-ellipsis-h "></i>
                     </div>
                 </div>
-                <span class="photo__likes"> 51 likes</span>
-                <ul class="photo_comments">
-                    <li class="photo_comment">
-                        <span class="photo__comment-author">nicolas</span>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    </li>
-                </ul>
-                <span class="photo__timestamp">12 hours ago</span>
-                <div class="photo__make-comment">
-                    <textarea placeholder="Add a comment.."></textarea>
-                    <i class="fa fa-ecllipsis-h "></i>
-                </div>
+            </article>
+        </section>
+        <section class="photos">
+            <article class="photo">
+                <header class="photo__header">
+                    <img src="images/avatar.jpg" class="photo__avatar" />
+                    <div class="photo__info">
+                        <span class="photo__owner">ina hur</span>
+                        <span class="photo__place">Chiang Mai, Thailand</span>
+                    </div>
+                </header>
+                <img src="images/feedPhoto.jpg" class="photo__file" />
+                <div class="photo__feedback">
+                    <div class="photo__actions">
+                        <div class="photo__action-column">
+                            <i class="fa fa-heart-o fa-lg"></i>
+                            <i class="fa fa-comment-o fa-lg"></i>
+                        </div>
+                        <div class="photo__action-column">
+                            <i class="fa fa-bookmark-o fa-lg"></i>
+                        </div>
+                    </div>
+                    <span class="photo__likes">51 likes</span>
+                    <ul class="photo__comments">
+                        <li class="photo__comment">
+                            <span class="photo__comment-author">
+                                nicolas
+                            </span>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        </li>
+                    </ul>
+                    <span class="photo__timestamp">12 hours ago</span>
+                    <div class="photo__make-comment">
+                        <textarea placeholder="Add a comment.."></textarea>
+                        <i class="fa fa-ellipsis-h "></i>
+                    </div>
                 </div>
             </article>
         </section>
     </main>
-
-    <!-- This is simple way to make : Footer>(nav>ul>li*9[a href="#"])+span{@ 2018 jasminepro}   -->
-    <footer class="footer">
-        <nav class="footer__navigation">
-            <ul class="footer__list">
-                <li class="footer__list-item">
-                    <a href="#">About us</a>
+    <!-- Footer -->
+    <footer class="footer ">
+        <nav class="footer__navigation ">
+            <ul class="footer__list ">
+                <li class="footer__list-item ">
+                    <a href="# " class="footer__link ">About us</a>
                 </li>
-                <li class="footer__list-item">
-                    <a href="#" class="footer_link">Support</a>
+                <li class="footer__list-item ">
+                    <a href="# " class="footer__link ">Support</a>
                 </li>
-                <li class="footer__list-item">
-                    <a href="#" class="footer_link">Blog</a>
+                <li class="footer__list-item ">
+                    <a href="# " class="footer__link ">Blog</a>
                 </li>
-                <li class="footer__list-item">
-                    <a href="#" class="footer_link">Press</a>
+                <li class="footer__list-item ">
+                    <a href="# " class="footer__link ">Press</a>
                 </li>
-                <li class="footer__list-item">
-                    <a href="#" class="footer_link">Api</a>
+                <li class="footer__list-item ">
+                    <a href="# " class="footer__link ">API</a>
                 </li>
-                <li class="footer__list-item">
-                    <a href="#" class="footer_link">Jobs</a>
+                <li class="footer__list-item ">
+                    <a href="# " class="footer__link ">Jobs</a>
                 </li>
-                <li class="footer__list-item">
-                    <a href="#" class="footer_link">Privacy</a>
+                <li class="footer__list-item ">
+                    <a href="# " class="footer__link ">Privacy</a>
                 </li>
-                <li class="footer__list-item">
-                    <a href="#" class="footer_link">Terms</a>
+                <li class="footer__list-item ">
+                    <a href="# " class="footer__link ">Terms</a>
                 </li>
-                <li class="footer__list-item">
-                    <a href="#" class="footer_link">Directory</a>
+                <li class="footer__list-item ">
+                    <a href="# " class="footer__link ">Directory</a>
                 </li>
-                <li class="footer__list-item">
-                    <a href="#" class="footer_link">Language</a>
+                <li class="footer__list-item ">
+                    <a href="# " class="footer__link ">Language</a>
                 </li>
             </ul>
         </nav>
-        <span>@ 2018 jasminepro</span>
+        <span class="footer__copyright ">© 2018 thaigram</span>
     </footer>
 
 </body>
